--- a/pika-refind-theme/debian/changelog
+++ b/pika-refind-theme/debian/changelog
@@ -1,3 +1,9 @@
+pika-refind-theme (1.1-99pika1.lunar) lunar; urgency=medium
+
+  * Fix install
+
+ -- ferreo <harderthanfire@gmail.com>  Wed, 18 Jan 2023 21:48:14 +0000
+
 pika-refind-theme (1.0-99pika1.lunar) lunar; urgency=medium
 
   * Initial release.
