--- a/pika-refind-theme/debian/changelog
+++ b/pika-refind-theme/debian/changelog
@@ -1,3 +1,9 @@
+pika-refind-theme (1.5-100pika1) pikauwu; urgency=medium
+
+  * Update to pikauwu
+
+ -- ferreo <harderthanfire@gmail.com>  Wed, 18 Jan 2023 21:48:14 +0000
+
 pika-refind-theme (1.5-99pika7.lunar) lunar; urgency=medium
 
   * Fix invalid resolution
